// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sorting logic > normal 1`] = `
[
  {
    "a": "a",
    "b": "c",
  },
  {
    "a": "x",
    "b": "z",
  },
]
`;

exports[`Sorting logic > normal 2`] = `
[
  {
    "a": "a",
    "b": "c",
  },
  {
    "a": "x",
    "b": "z",
  },
]
`;

exports[`Sorting logic > normal 3`] = `
[
  {
    "a": null,
    "b": "c",
  },
  {
    "a": null,
    "b": "d",
  },
]
`;

exports[`Sorting logic > normal 4`] = `
[
  {
    "a": "z",
    "b": "c",
  },
  {
    "a": null,
    "b": "c",
  },
]
`;

exports[`Sorting logic > normal 5`] = `
[
  {
    "a": null,
    "b": "a",
  },
  {
    "a": null,
    "b": null,
  },
]
`;

exports[`Sorting logic > normal 6`] = `
[
  {
    "a": null,
    "b": "a",
  },
  {
    "a": undefined,
    "b": undefined,
  },
]
`;

exports[`Sorting logic > reverse 1`] = `
[
  {
    "a": "x",
    "b": "z",
  },
  {
    "a": "a",
    "b": "c",
  },
]
`;

exports[`Sorting logic > reverse 2`] = `
[
  {
    "a": "x",
    "b": "z",
  },
  {
    "a": "a",
    "b": "c",
  },
]
`;

exports[`Sorting logic > reverse 3`] = `
[
  {
    "a": null,
    "b": "d",
  },
  {
    "a": null,
    "b": "c",
  },
]
`;

exports[`Sorting logic > reverse 4`] = `
[
  {
    "a": "z",
    "b": "c",
  },
  {
    "a": null,
    "b": "c",
  },
]
`;

exports[`Sorting logic > reverse 5`] = `
[
  {
    "a": null,
    "b": "a",
  },
  {
    "a": null,
    "b": null,
  },
]
`;

exports[`Sorting logic > reverse 6`] = `
[
  {
    "a": null,
    "b": "a",
  },
  {
    "a": undefined,
    "b": undefined,
  },
]
`;
